package com.example.Jewelry.event;

public enum InventoryChangeType {
    IMPORT,
    SALE,
    ADJUSTMENT,
    RETURN
}
