package com.example.Jewelry.event;

public enum InventoryReferenceType {
    IMPORT_RECEIPT,
    ORDER,
    MANUAL_ADJUSTMENT,
    SYSTEM
}
